--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,4 +13,12 @@
  *= require_tree .
  *= require_self
  *= stub active_admin
+ *= stub scaffolds
  */
+
+@import "bootstrap";
+
+.logo_img {
+  width: 50px;
+  height: 50px;
+}
