--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,10 @@
 @import "bootstrap";
 
 .logo_img {
-  width: 50px;
-  height: 50px;
+  width: 35px;
+  height: 35px;
+}
+
+.navbar-brand {
+  color: #fad138 !important;
 }
