--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
       <ul class="navbar-nav d-flex align-items-center">
         <li class="nav-item">
-          <a class="nav-link" href="#">메이트 찾기</a>
+          <a class="nav-link" href="/users">메이트 찾기</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">메이트 모집</a>
