--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,29 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-5 offset-2">
+      <div>
+        <span><%=@user.name %></span>
+        <span><%=@user.role %></span>
+      </div>
+      <div>
+        <span><%=@user.region %></span>
+      </div>
+      <div>
+        <span><%=@user.email %></span>
+      </div>
+      <div>
+        <span><%=@user.detail_list %></span>
+      </div>
+      <div>
+        <a href="/users/edit" class="btn btn-outline-dark mt-4">프로필 수정</a>
+      </div>
+    </div>
+    <div class="col-3">
+      <% if current_user.profile.attached? %>
+        <img src="<%= url_for(current_user.profile) %>" alt="" class="profile_img rounded-circle">
+      <% else %>
+        <img src="https://picsum.photos/seed/picsum/200/300" alt="" class="profile_img rounded-circle">
+      <% end %>
+    </div>
+  </div>
+</div>
